test/errors/type/collections/set/__bandnot1.yasl
echo collections.set().__bandnot(collections.set(), true)
